starts working towards successfully running backend

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,9 @@ logging:
     org:
       springframework:
         security: DEBUG
+
+jwt.signing.key.secret: mySecret
+jwt.get.token.uri: /authenticate
+jwt.refresh.token.uri: /refresh
+jwt.http.request.header: Authorization
+jwt.token.expiration.in.seconds: 604800
