--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "4.1.3",
+    "history": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
     "reactstrap": "6.5.0",
